# technical-devops

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  test_api.sh  test_api_result.txt  tests.sh
devops_interview/: config.py  database.py  main.py  models.py
nginx/: nginx.conf
tests/: test_unit.py
