[tool.poetry]
name = "devops-interview"
version = "0.1.0"
description = ""
authors = ["pejmans21 <pezhmansamadi21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
sqlmodel = "^0.0.24"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
pytest = "^8.4.1"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.27.0"
requests = "^2.31.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
